--- a/vercel.json
+++ b/vercel.json
@@ -1,40 +1,31 @@
 {
   "version": 2,
-  "alias": "www.rakesh.website",
+  "alias": "www.cihatata.dev",
   "cleanUrls": true,
   "public": true,
-  "regions": ["bom1"],
+  "regions": [
+    "bom1"
+  ],
   "redirects": [
-    { "source": "/github", "destination": "https://github.com/ra-kesh" },
+    {
+      "source": "/github",
+      "destination": "https://github.com/cihatata"
+    },
     {
       "source": "/linkedin",
-      "destination": "https://www.linkedin.com/in/iamrakeshkumar/"
-    },
-    { "source": "/portfolio", "destination": "/projects" },
-    { "source": "/twitter", "destination": "https://twitter.com/kumarakeshh" },
-    { "source": "/peerlist", "destination": "https://peerlist.io/rakesh" },
-    {
-      "source": "/polywork",
-      "destination": "https://www.polywork.com/iamrakesh"
+      "destination": "https://www.linkedin.com/in/cihat-ata/"
     },
     {
-      "source": "/showcase",
-      "destination": "https://www.showwcase.com/rakesh"
+      "source": "/portfolio",
+      "destination": "/projects"
     },
-    { "source": "/dev", "destination": "https://dev.to/rakesh" },
-    { "source": "/hashnode", "destination": "https://rakesh.hashnode.dev/" },
-    { "source": "/mail", "destination": "mailto:iamrakeshkumar@pm.me" },
-    { "source": "/rave", "destination": "https://raveit.netlify.app/" },
     {
-      "source": "/mad",
-      "destination": "https://moto-armor-depot.netlify.app/products"
+      "source": "/twitter",
+      "destination": "https://twitter.com/cihatata"
     },
-    { "source": "/quiz", "destination": "https://rto-quiz.netlify.app/" },
-    { "source": "/torque", "destination": "https://torquetv.netlify.app/" },
-    { "source": "/run", "destination": "https://runreact.netlify.app/" },
     {
-      "source": "/stack",
-      "destination": "https://stackoverflow.com/users/14043051/r4k3sh"
+      "source": "/medium",
+      "destination": "https://cihatata.medium.com/"
     },
     {
       "source": "/resume",
